--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,6 @@
-<h2 id="title">Welcome to Ember</h2>
-
+<h1>Venture</h1>
+{{#link-to 'map'}} <span>Map</span> {{/link-to}} 
+| 
+{{#link-to 'character'}} <span>Character</span> {{/link-to}}
 {{outlet}}
+<h6>copyright now.</h6>
