--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -3,4 +3,4 @@
 | 
 {{#link-to 'character'}} <span>Character</span> {{/link-to}}
 {{outlet}}
-<h6>copyright now.</h6>
+<footer>copyright now.</footer>
