--- a/app/templates/map.hbs
+++ b/app/templates/map.hbs
@@ -3,6 +3,14 @@
 Width: {{input value=mapWidth size="3"}}
 Height: {{input value=mapHeight size="3"}}
 
+<div>
+  Character:
+</div>
+<div>
+  Summery:
+</div>
+
+
 <table style="border: 1px solid gray;">
   {{#each map.rows as |row|}}
     <tr>
@@ -12,3 +20,38 @@ Height: {{input value=mapHeight size="3"}}
     </tr>
   {{/each}}
 </table>
+<div>
+  <table>
+    <tr>
+      <td></td>
+      <td>
+        <button type="button" class="btn btn-default btn-lg">
+          up
+        </button>
+      </td>
+      <td></td>
+    </tr>
+    <tr>
+      <td>
+        <button type="button" class="btn btn-default btn-lg">
+          Left
+        </button>
+      </td>
+      <td></td>
+      <td>
+        <button type="button" class="btn btn-default btn-lg">
+          Right
+        </button>
+      </td>
+    </tr>
+     <tr>
+      <td></td>
+      <td>
+        <button type="button" class="btn btn-default btn-lg">
+          down
+        </button>
+      </td>
+      <td></td>
+    </tr>
+  </table>
+</div>
