--- a/app/templates/map.hbs
+++ b/app/templates/map.hbs
@@ -25,7 +25,7 @@ Height: {{input value=mapHeight size="3"}}
     <tr>
       <td></td>
       <td>
-        <button type="button" class="btn btn-default btn-lg">
+        <button type="button" class="btn btn-default btn-lg" {{action 'movePlayer' 'up'}}>
           up
         </button>
       </td>
