--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -2,5 +2,7 @@
 {{#link-to 'map'}} <span>Map</span> {{/link-to}} 
 | 
 {{#link-to 'character'}} <span>Character</span> {{/link-to}}
+|
+{{#link-to 'login'}} <span>login</span> {{/link-to}}
 {{outlet}}
 <footer>copyright now.</footer>
