--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,8 +1,10 @@
 <h1>Venture</h1>
-{{#link-to 'map'}} <span>Map</span> {{/link-to}} 
-| 
+{{#link-to 'map'}} <span>Map</span> {{/link-to}}
+|
 {{#link-to 'character'}} <span>Character</span> {{/link-to}}
 |
 {{#link-to 'login'}} <span>login</span> {{/link-to}}
+|
+{{#link-to 'authenticated.secretz'}} <span>sec</span> {{/link-to}}
 {{outlet}}
 <footer>copyright now.</footer>
