--- a/app/templates/login.hbs
+++ b/app/templates/login.hbs
@@ -1,11 +1,19 @@
-<div>
-  <span>Identification</span> <span> {{input value=identification size=50}} </span>
-</div>
+<form {{action "authenticate" on="submit"}}>
+  <div>
+    <label for="identification"> E-mail</label><br />
+    {{input value =identification placeholder="E-mail" type= "text" name="email"}}
+  </div>
+
+ <div>
+    <label for="password">password</label><br />
+    {{input value =password placeholder="" type= "text" name="password"}}
+  </div>
 
 <div>
-  <span>Password</span> <span> {{input value=Password size=50}} </span>
+  <button type="submit"> GO! </button>
 </div>
 
-<div>
-  <button {{action 'summitLogin'}}> GO! </button>
-</div>
+</form>
+
+
+
