--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -7,4 +7,4 @@
 |
 {{#link-to 'authenticated.secretz'}} <span>sec</span> {{/link-to}}
 {{outlet}}
-<footer>copyright now.</footer>
+<footer>copyright now 2015.</footer>
