--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,7 +1,7 @@
 <h1>Venture</h1>
-{{#link-to 'map'}} <span>Map</span> {{/link-to}}
+{{#link-to 'authenticated.map'}} <span>Map</span> {{/link-to}}
 |
-{{#link-to 'character'}} <span>Character</span> {{/link-to}}
+{{#link-to 'authenticated.character'}} <span>Character</span> {{/link-to}}
 |
 {{#link-to 'login'}} <span>login</span> {{/link-to}}
 |
