added a logout page

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -6,5 +6,9 @@
 {{#link-to 'login'}} <span>login</span> {{/link-to}}
 |
 {{#link-to 'authenticated.secretz'}} <span>sec</span> {{/link-to}}
+|
+{{#link-to 'logout'}} <span>LogOut</span> {{/link-to}}
+
+
 {{outlet}}
 <footer>copyright now 2015.</footer>
