--- a/app/templates/authenticated/play.hbs
+++ b/app/templates/authenticated/play.hbs
@@ -12,10 +12,10 @@ Height: {{input value=mapHeight size="3"}}
 
 
 <table style="border: 1px solid gray;">
-  {{#each map.rows as |row|}}
+  {{#each rows as |row|}}
     <tr>
-      {{#each row.cells as |cell|}}
-        <td>{{cell.text}}</td>
+      {{#each row as |cell|}}
+        <td class="tile {{ cell.tileClass }}">{{cell.text}}</td>
       {{/each}}
     </tr>
   {{/each}}
@@ -25,7 +25,7 @@ Height: {{input value=mapHeight size="3"}}
     <tr>
       <td></td>
       <td>
-        <button type="button" class="btn btn-default btn-lg" {{action 'move' '0' '1'}}>
+        <button type="button" class="btn btn-default btn-lg" {{action 'move' 0 1}}>
           up
         </button>
       </td>
@@ -33,13 +33,13 @@ Height: {{input value=mapHeight size="3"}}
     </tr>
     <tr>
       <td>
-        <button type="button" class="btn btn-default btn-lg"{{action 'movePlayer' 'left'}}>
+        <button type="button" class="btn btn-default btn-lg"{{action 'move' -1 0}}>
           Left
         </button>
       </td>
       <td></td>
       <td>
-        <button type="button" class="btn btn-default btn-lg"{{action 'movePlayer' 'right'}}>
+        <button type="button" class="btn btn-default btn-lg"{{action 'move' 1 0}}>
           Right
         </button>
       </td>
@@ -47,7 +47,7 @@ Height: {{input value=mapHeight size="3"}}
      <tr>
       <td></td>
       <td>
-        <button type="button" class="btn btn-default btn-lg"{{action 'movePlayer' 'down'}}>
+        <button type="button" class="btn btn-default btn-lg"{{action 'move' 0 -1}}>
           down
         </button>
       </td>
