got test to work only if you start out loged out

--- a/app/templates/login.hbs
+++ b/app/templates/login.hbs
@@ -1,12 +1,12 @@
 <form {{action "authenticate" on="submit"}}>
   <div>
     <label for="identification"> E-mail</label><br />
-    {{input value =identification placeholder="E-mail" type= "text" name="email"}}
+    {{input value =identification placeholder="E-mail" type= "text" name="email" class = "app-email"}}
   </div>
 
  <div>
     <label for="password">password</label><br />
-    {{input value =password placeholder="" type= "text" name="password"}}
+    {{input value =password placeholder="" type= "text" name="password" class = "app-password"}}
   </div>
 
 <div>
